--- a/index.html
+++ b/index.html
@@ -1,18 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-<html><head>
-  <style>body,html,iframe{margin:0;padding:0;height:100%;width:100%;overflow:hidden}.forceIosScrolling{overflow:scroll;-webkit-overflow-scrolling:touch}</style>
-<style type="text/css"></style><script src="https://apis.google.com/_/scs/abc-static/_/js/k=gapi.lb.en.yTSbWrSe458.O/m=gapi_rpc/rt=j/sv=1/d=1/ed=1/rs=AHpOoo_5dpdVCMe_LPx1yH-hHA2M85TB-Q/cb=gapi.loaded_0?le=scs" async=""></script><script src="https://apis.google.com/js/api.js?checkCookie=1" gapi_processed="true"></script></head>
+<html lang="en"><head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="pragma" content="no-cache">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta charset="utf-8">
 
-<body>
-<iframe id="userHtmlFrame" frameborder="0" scrolling="yes" style="overflow: auto;">
-</iframe>
+        <!-- Set the title bar of the page -->
+        <title>Iron Snout</title>
+		<script src="html5game/sdk.js"></script>
+        <style>
+            body {
+              background: #ffffff;
+              color:#cccccc;
+              margin: 0px;
+              padding: 0px;
+              border: 0px;
+			  overflow:hidden;
+            }
+			
+            canvas {
+                      image-rendering: optimizeSpeed;
+                      -webkit-interpolation-mode: nearest-neighbor;
+                      -ms-touch-action: none;
+                      margin: 0px;
+                      padding: 0px;
+                      border: 0px;
+            }
+            :-webkit-full-screen #canvas {
+                 width: 100%;
+                 height: 100%;
+            }
+			
+            div.gm4html5_div_class
+            {
+              margin: 0px;
+              padding: 0px;
+              border: 0px;
+            }
+        </style>
+    <style type="text/css"></style><script type="text/javascript" async="" src=""></script><script type="text/javascript" async="" src=""></script><script type="text/javascript" async="" src=""></script></head>
 
-<script>function loadGapi(){var loaderScript=document.createElement('script');loaderScript.setAttribute('src','https://apis.google.com/js/api.js?checkCookie=1');loaderScript.onload=function(){this.onload=function(){};loadGapiClient();};loaderScript.onreadystatechange=function(){if(this.readyState==='complete'){this.onload();}};(document.head||document.body||document.documentElement).appendChild(loaderScript);}function updateUserHtmlFrame(userHtml,enableInteraction,forceIosScrolling){var frame=document.getElementById('userHtmlFrame');if(enableInteraction){if(forceIosScrolling){var iframeParent=frame.parentElement;iframeParent.classList.add('forceIosScrolling');}else{frame.style.overflow='auto';}}else{frame.setAttribute('scrolling','no');frame.style.pointerEvents='none';}clearCookies();clearStorage();frame.contentWindow.document.open();frame.contentWindow.document.write('<base target="_blank">'+userHtml);frame.contentWindow.document.close();}function onGapiInitialized(){gapi.rpc.call('..','innerFrameGapiInitialized');gapi.rpc.register('updateUserHtmlFrame',updateUserHtmlFrame);}function loadGapiClient(){gapi.load('gapi.rpc',onGapiInitialized);}if(document.readyState=='complete'){loadGapi();}else{self.addEventListener('load',loadGapi);}function clearCookies(){var cookies=document.cookie.split(";");for(var i=0;i<cookies.length;i++){var cookie=cookies[i];var equalPosition=cookie.indexOf("=");var name=equalPosition>-1?cookie.substr(0,equalPosition):cookie;document.cookie=name+"=;expires=Thu, 01 Jan 1970 00:00:00 GMT";document.cookie=name+"=;expires=Thu, 01 Jan 1970 00:00:01 GMT ;domain=.googleusercontent.com";}}function clearStorage(){try{localStorage.clear();sessionStorage.clear();}catch(e){}}</script>
+    <body>
+        <div class="gm4html5_div_class" id="gm4html5_div_id">
+            <!-- Create the canvas element the game draws to -->
+            <canvas id="canvas" width="460" height="280" style="cursor: none;">
+               <p>Your browser doesn't support HTML5 canvas.</p>
+            </canvas>
+			
+			<script type="text/javascript" src="html5game/IronSnout.js"></script>
+        </div>
+		<script>
+		var sdk 		= PokiSDK;
+		var pokiDebug 		= false;
+		
+		
+		function poki_log(t) {
+			if (pokiDebug) console.log(t);
+		}
+		
+		function poki_loading(percents) {
+			sdk.gameLoadingProgress({percentageDone: percents});
+		}
+
+		
+		window.onload = function() {
+			sdk.init().then(() => {
+				GameMaker_Init();			
+				sdk.gameLoadingStart();				
+			}).catch(() => {
+				GameMaker_Init();
+			});
+			sdk.setDebug(pokiDebug);
+		}
+		
+		document.getElementById("canvas").width 	= window.innerWidth;
+		document.getElementById("canvas").height 	= window.innerHeight;
+		</script>
+    
 
 
-</body></html>
+<script src="html5game/iqh_gmCallback.js" type="text/javascript"></script><script src="html5game/jqh_poki.js" type="text/javascript"></script><script src="html5game/kqh_ImageLoadBar.js" type="text/javascript"></script><script src="html5game/lqh_browser_click_handler.js" type="text/javascript"></script><script src="html5game/nqh_Miniclip.js" type="text/javascript"></script><script src="html5game/oqh_SnoutWeb.js" type="text/javascript"></script><script src="html5game/rqh_JSVideoControl.js" type="text/javascript"></script></body></html>
   </main>
 </body>
 </html>
