--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html>
 <head>
 <iframe id="gameiframe" src="https://html5.gamemonetize.co/6lwby15w8k0qozvguqlob5sv2h8hpuiv/?gamedomain=play.gamemonetize.co" style="border: 0; position:fixed; top:0; left:0; right:0; bottom:0; width:100%; height:100%" frameborder="0" scrolling="no" allowfullscreen="true"></p></iframe>
+  <html>
+<head>
+    <style>
+        #button {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 10px;
+            background-color: ##4BDBF2;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <a href="https://munch4lunch.github.io/Lolgame1/" id="button">Go to Home</a>
+</body>
+</html>
   </main>
 </body>
 </html>
